@@ -10,6 +10,6 @@
 @* $End-ApplicationInsights$ *@
 @using Microsoft.AspNet.Hosting
 @using Microsoft.AspNet.Http
-@using Microsoft.Framework.OptionsModel
+@using Microsoft.Extensions.OptionsModel
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
 @addTagHelper "*, Boilerplate.Web.Mvc6.TagHelpers"
