@@ -1,2 +1,0 @@
-﻿server=Microsoft.AspNet.Server.WebListener
-server.urls=http://localhost:5000
